--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ embarking on learning continuously.</p>
                             </div>
 
                             <div class="col-lg-6 col-12 mt-5 mt-lg-0">
-                                <form action="#" method="get" class="custom-form contact-form" role="form">
+                                <form action="https://formspree.io/f/xknkbran" method="post" class="custom-form contact-form" role="form">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-12">
                                             <div class="form-floating">
